# sample_ecommerce

./: .gitignore  README.md  pyproject.toml
backend/: db.sqlite3
backend/backend/: settings.py
backend/base/: models.py  views.py
backend/base/migrations/: 0001_initial.py  0002_order_orderitem_review_shippingaddress.py  0003_product_image.py
frontend/: package-lock.json
frontend/public/: index.html
frontend/src/: App.js  index.js  store.js
frontend/src/actions/: productActions.js
frontend/src/components/: Footer.js  Header.js  Loader.js  Message.js  Product.js  Rating.js
frontend/src/reducers/: productReducers.js
frontend/src/screens/: HomeScreen.js  ProductScreen.js
