[tool.poetry]
name = "ecommerce"
version = "0.1.0"
description = ""
authors = ["Nackan <59600727+RyosukeNAKATA@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2"
djangorestframework = "^3.12.4"
django-cors-headers = "^3.7.0"
autopep8 = "^1.5.7"
Pillow = "^8.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
